# CrossFury

./: .gitignore  Cargo.toml  CrossFury_核心Trait定义.md  binance_api_config.md  check_output.txt  config.toml  run_tests.ps1  test_binance_connection.py  币安期货连接器重构功能清单.md  重构错误汇总.md
binance_test/: Cargo.toml
binance_test/src/: main.rs
examples/: binance_connector_demo.rs  lbank_connector_demo.rs
src/: config.rs  core.rs  cross_exchange.rs  error_handling.rs  exchange_types.rs  json_parser.rs  lib.rs  main.rs  symbol_mapper.rs  terminal_log.rs  token_lists.rs  utils.rs
src/connectors/: mod.rs
src/connectors/binance/: adapter.rs  mod.rs  spot.rs  test.rs  websocket.rs
src/connectors/binance/futures/: cache.rs  (+9 more)
src/connectors/common/: adaptive_timeout.rs  advanced_connection.rs  batch_subscription.rs  emergency_ping.rs  mod.rs  orderbook_validator.rs  smart_error_recovery.rs  symbol_converter.rs
src/connectors/lbank/: adapter.rs  mod.rs  test.rs  websocket.rs
src/connectors/traits/: mod.rs
src/network/: api_client.rs  batonex_websocket.rs  binance_futures_websocket.rs  bybit_futures_websocket.rs  coincatch_websocket.rs  connection_manager.rs  hbit_websocket.rs  lbank_websocket.rs  message_processor.rs  mod.rs  okx_futures_websocket.rs  tapbit_websocket.rs  websocket.rs  xtcom_websocket.rs
src/types/: account.rs  common.rs  config.rs  errors.rs  events.rs  exchange.rs  market_data.rs  mod.rs  orders.rs  trading.rs
tests/: README.md
tests/integration/: mod.rs
项目重构文档/: 01_连接模块重构方案.md  01_连接模块重构方案_优化版.md  02_执行模块重构方案.md  03_策略控制器模块重构方案.md  04_测试框架模块重构方案.md
