[package]
name = "trifury"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
futures-util = "0.3"
dashmap = "5.4"
csv = "1.2"
rand = "0.8"
lazy_static = "1.4"
thiserror = "1.0"
tokio-tungstenite = { version = "0.18", features = ["native-tls"] }
num_cpus = "1.15"
colored = "2.0"
http = "0.2"
uuid = { version = "1.3", features = ["v4"] }
hmac = "0.12.1"
sha2 = "0.10.6"
hex = "0.4.3"
once_cell = "1.17"
serde_yaml = "0.9"
toml = "0.7"
simd-json = "0.11"

[[bin]]
name = "test_binance_adapter"
path = "test_binance_adapter.rs"

[[bin]]
name = "test_binance_websocket"
path = "test_binance_websocket.rs"

[[bin]]
name = "test_binance_rest"
path = "test_binance_rest.rs"

[[bin]]
name = "test_simple_websocket"
path = "test_simple_websocket.rs"

[[bin]]
name = "test_depth_processing"
path = "test_depth_processing.rs"

[[bin]]
name = "test_enhanced_depth"
path = "test_enhanced_depth.rs"



